--- a/git_sample.html
+++ b/git_sample.html
@@ -8,5 +8,6 @@
         <p>Our sample Git project file</p>
         <p>Git is awesome!</p>
         <p>Github is awesome too!</p>
+        <h2>This is a brand new heading</h2>
     </body>
 </html>
