--- a/git_sample.html
+++ b/git_sample.html
@@ -9,6 +9,6 @@
         <p>Git is awesome!</p>
         <p>Github is awesome too!</p>
         <h2>This is a brand new heading</h2>
-        <p>With a little paragraph beside.</p>
+        <p>With a little paragraph beside it.</p>
     </body>
 </html>
